--- a/problem_set_3/PS3.ipynb
+++ b/problem_set_3/PS3.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "source": [
     "I defined the routine rk4_step to use the Runge Kutta mthod for integrating diferential equations. Thus:\n",
-    "$$f(x,y)=\\frac{dy}{dx}$$\n",
+    "$$f(x,y)=\frac{dy}{dx}$$\n",
     "$$k_{1}=hf(x_{n},y_{n})$$\n",
     "$$k_{2}=hf(x_{n}+h/2,y_{n}+k_{1}/2)$$\n",
     "$$k_{3}=hf(x_{n}+h/2,y+k_{2}/2)$$\n",
