--- a/problem_set_3/PS3.ipynb
+++ b/problem_set_3/PS3.ipynb
@@ -32,12 +32,12 @@
    "id": "f5084b62",
    "metadata": {},
    "source": [
-    "I defined the routine rk4_step to use the Runge Kutta mthod for integrating diferential equations. Thus:\n",
-    "$f(x,y)=\\frac{dy}{dx}$\n",
-    "$k_{1}=hf(x_{n},y_{n})$\n",
-    "$k_{2}=hf(x_{n}+h/2,y_{n}+k_{1}/2)$\n",
-    "$k_{3}=hf(x_{n}+h/2,y+k_{2}/2)$\n",
-    "$k_{4}=hf(x_{n}+h,y_{n}+k_{3})$\n",
+    "I defined the routine rk4\_step to use the Runge Kutta mthod for integrating diferential equations. Thus:\n",
+    "$$f(x,y)=\\frac{dy}{dx}$$\n",
+    "$$k_{1}=hf(x_{n},y_{n})$$\n",
+    "$$k_{2}=hf(x_{n}+h/2,y_{n}+k_{1}/2)$$\n",
+    "$$k_{3}=hf(x_{n}+h/2,y+k_{2}/2)$$\n",
+    "$$k_{4}=hf(x_{n}+h,y_{n}+k_{3})$$\n",
     "And then:\n",
     "$$y_{n+1}=y_{n}+k_{1}/6+k_{2}/3+k_{3}/3+k_{4}/6$$\n",
     "or\n",
