--- a/problem_set_3/PS3.ipynb
+++ b/problem_set_3/PS3.ipynb
@@ -32,7 +32,7 @@
    "id": "f5084b62",
    "metadata": {},
    "source": [
-    "I defined the routine rk4\_step to use the Runge Kutta mthod for integrating diferential equations. Thus:\n",
+    "I defined the routine rk4 step to use the Runge Kutta mthod for integrating diferential equations. Thus:\n",
     "$$f(x,y)=\\frac{dy}{dx}$$\n",
     "$$k_{1}=hf(x_{n},y_{n})$$\n",
     "$$k_{2}=hf(x_{n}+h/2,y_{n}+k_{1}/2)$$\n",
